tests/modules/bad/module_unknown_export.hel
// @name module_unknown_export
// @phase modules
// @expect error

import badmod2

main = () : IO<()> {
    0
}
